--- a/TravelRecord/TravelRecord/App.xaml
+++ b/TravelRecord/TravelRecord/App.xaml
@@ -2,7 +2,16 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecord.App">
-	<Application.Resources>
-    
-	</Application.Resources>
+	
+    <Application.Resources>
+        <ResourceDictionary>
+            <Color x:Key="blueColor">#1E90FF</Color>
+            <Color x:Key="WhiteColor">#FFFFFF</Color>
+
+            <Style TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource blueColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource WhiteColor}"/>
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
